Fix: Hide spacing pseduo in editor when no block margin applied

--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -9,6 +9,7 @@
 
       &::before {
          top: 0;
+         display: flex;
          height: var(--block-margin-sm, 2rem);
       }
    }
@@ -18,6 +19,7 @@
 
       &::before {
          top: 0;
+         display: flex;
          height: var(--block-margin-md, 4rem);
       }
    }
@@ -27,6 +29,7 @@
 
       &::before {
          top: 0;
+         display: flex;
          height: var(--block-margin-lg, 6rem);
       }
    }
@@ -37,6 +40,7 @@
 
       &::after {
          bottom: 0;
+         display: flex;
          height: var(--block-margin-sm, 2rem);
       }
    }
@@ -46,6 +50,7 @@
 
       &::after {
          bottom: 0;
+         display: flex;
          height: var(--block-margin-md, 4rem);
       }
    }
@@ -55,6 +60,7 @@
 
       &::after {
          bottom: 0;
+         display: flex;
          height: var(--block-margin-lg, 6rem);
       }
    }
